cmake_minimum_required(VERSION 3.27)
project(Projekt)
set(CMAKE_CXX_STANDARD 20)
set(BUILD_SHARED_LIBS OFF)

include(FetchContent)

FetchContent_Declare(
        SFML
        GIT_REPOSITORY https://github.com/SFML/SFML
        GIT_TAG 2.6.1
)
FetchContent_Declare(
        fmt
        GIT_REPOSITORY  https://github.com/fmtlib/fmt
        GIT_TAG         10.0.0
)

FetchContent_MakeAvailable(fmt)

FetchContent_MakeAvailable(SFML)

add_executable(xd main.cpp Player.cpp Tile.cpp Map.cpp Enemy.cpp)

target_link_libraries(xd fmt sfml-graphics)